# CubeSolver

./: .gitignore  Cube.cpp  Cube.h  CubeSolver  Makefile  MovementLogicMap.txt  README.md  Solver.cpp  Solver.h  main.cpp
Rubix/: .gitignore  CMakeLists.txt  Cube.cpp  Cube.h  Makefile  MovementLogicMap.md  README.md  Solver.cpp  Solver.h  SolvingAlgo.md  build.sh  byte_manip.cpp  main.cpp
Rubix/Inc/: Cube.h  Solver.h
Rubix/Testing/: Test_Cube.cpp  test_pass_by_ref.cpp
Rubix/docs/: MovementLogicMap.md  SolvingAlgo.md
Rubix/src/: Cube.cpp  Solver.cpp  main.cpp
Visual Engine/: .gitignore  ARCHITECTURE.md  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  README.md.in  build.sh  cmake_install.cmake
Visual Engine/include/: CubeRenderer.h
Visual Engine/shaders/: cube.frag  cube.vert
Visual Engine/src/: CubeRenderer.cpp  main.cpp
